--- a/labs/list2/list_2.ipynb
+++ b/labs/list2/list_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,6 +361,26 @@
     "                    return self.id_vertex_dict[Vert_id].edges\n",
     "                else:\n",
     "                    raise ValueError(f\"There are {len(self.name_id_dict[vertKey])} vertices in the graph named '{vertKey}', please use as argument vertKey = ['{vertKey}', order].\")\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def saveGraph(graph: Graph): \n",
+    "        end_name_id_map = graph.get_id_names_maping()\n",
+    "        notes_id = graph.get_vertex_id()\n",
+    "        notes_names = [end_name_id_map[id] for id in notes_id]\n",
+    "        \n",
+    "        edges_ids = {}\n",
+    "        edges_by_id = g.edges_by_id\n",
+    "        for ids in edges_by_id:\n",
+    "            if not (ids in edges_ids or ids[::-1] in edges_ids):\n",
+    "                edges_ids[ids] = {\"weight\":edges_by_id[ids].get_weight()}\n",
+    "        \n",
+    "        with open(\"graph.dot\", \"w\") as f:\n",
+    "            f.write(\"graph G {\\n\")\n",
+    "            for name in notes_names:\n",
+    "                f.write(f'   \"{name}\";\\n')\n",
+    "            for edge_ids in edges_ids:\n",
+    "                    f.write(f'   \"{end_name_id_map[edge_ids[0]]}\" -- \"{end_name_id_map[edge_ids[1]]}\" [ label = \"{edges_ids[edge_ids][\"weight\"]}\" ];\\n')\n",
+    "            f.write(\"}\")\n",
     "\n"
    ]
   },
@@ -374,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +410,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +442,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/1673963520.py:204: Warning: There are 2 vertex with the same value:A in the graph.\n",
+      "/tmp/ipykernel_114223/3336178149.py:207: Warning: There are 2 vertex with the same value:A in the graph.\n",
       "  warnings.warn(f\"There are {len(self.name_id_dict[Vert.get_value()])} vertex with the same value:{Vert.get_value()} in the graph.\", Warning)\n"
      ]
     },
@@ -432,7 +452,7 @@
        "{0: ['A', 0], 1: ['A', 1], 2: 'C'}"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +487,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -495,15 +515,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b568f10>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9b5687d0>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9b5685d0>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b568410>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b568250>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b568550>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b5f8490>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b5f8510>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b5f8e10>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b5f8a10>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b5f9d90>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b5fb010>}"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -537,24 +557,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/1673963520.py:258: Warning: You are trying to add an existing edge.\n",
+      "/tmp/ipykernel_114223/3336178149.py:261: Warning: You are trying to add an existing edge.\n",
       "  warnings.warn(\"You are trying to add an existing edge.\", Warning)\n",
-      "/tmp/ipykernel_114223/1673963520.py:262: Warning: You updat the weight value of edge [fromVert, toVert].\n",
+      "/tmp/ipykernel_114223/3336178149.py:265: Warning: You updat the weight value of edge [fromVert, toVert].\n",
       "  warnings.warn(\"You updat the weight value of edge [fromVert, toVert].\", Warning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b568d10>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9b56aa10>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9b568d50>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b569850>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b5693d0>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b56a490>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b5fafd0>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b5fb690>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b5fbdd0>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b5f9d10>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b5f9590>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b5fbc90>}"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -590,15 +610,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b565010>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9b566a90>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9b565fd0>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b5653d0>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b565f50>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b564d50>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b419a90>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b418f90>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b419590>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b419650>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b418a10>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b418e90>}"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,18 +639,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['A', <__main__.Vertex at 0x7f2b9b790f10>],\n",
-       " ['B', <__main__.Vertex at 0x7f2b9bbe9cd0>],\n",
-       " ['C', <__main__.Vertex at 0x7f2b9bc0d210>]]"
+       "[['A', <__main__.Vertex at 0x7f2b9b432b10>],\n",
+       " ['B', <__main__.Vertex at 0x7f2b9b418790>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9b41b9d0>]]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,21 +668,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[['A', 'B'], <__main__.Edge at 0x7f2b9b566110>],\n",
-       " [['B', 'A'], <__main__.Edge at 0x7f2b9b566bd0>],\n",
-       " [['B', 'C'], <__main__.Edge at 0x7f2b9b567810>],\n",
-       " [['C', 'B'], <__main__.Edge at 0x7f2b9b566250>],\n",
-       " [['C', 'A'], <__main__.Edge at 0x7f2b9b564c10>],\n",
-       " [['A', 'C'], <__main__.Edge at 0x7f2b9b566e50>]]"
+       "[[['A', 'B'], <__main__.Edge at 0x7f2b9b58bd10>],\n",
+       " [['B', 'A'], <__main__.Edge at 0x7f2b9b58bbd0>],\n",
+       " [['B', 'C'], <__main__.Edge at 0x7f2b9b588e90>],\n",
+       " [['C', 'B'], <__main__.Edge at 0x7f2b9b58b5d0>],\n",
+       " [['C', 'A'], <__main__.Edge at 0x7f2b9b58b590>],\n",
+       " [['A', 'C'], <__main__.Edge at 0x7f2b9b58b950>]]"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,17 +700,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['B', <__main__.Vertex at 0x7f2b9b504b10>],\n",
-       " ['C', <__main__.Vertex at 0x7f2b9b505810>]]"
+       "[['B', <__main__.Vertex at 0x7f2b9b58b4d0>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9b58bad0>]]"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +737,7 @@
        "(True, True, False)"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,6 +752,32 @@
     "                    [\"C\",\"A\"]])\n",
     "\n",
     "\"A\" in g, \"B\" in g, \"D\" in g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = Graph()\n",
+    "\n",
+    "g.addEdgesFromList([[\"Alice\",\"Bob\"],\n",
+    "                    [\"Bob\",\"Gail\"],\n",
+    "                    [\"Irene\",\"Gail\"],\n",
+    "                    [\"Carl\",\"Alice\"],\n",
+    "                    [\"Gail\",\"Harry\"],\n",
+    "                    [\"Irene\",\"Jen\"],\n",
+    "                    [\"Alice\",\"David\"],\n",
+    "                    [\"Harry\",\"Jen\"],\n",
+    "                    [\"Ernst\",\"Frank\"],\n",
+    "                    [\"Alice\",\"Ernst\"],\n",
+    "                    [\"Jen\",\"Gail\"],\n",
+    "                    [\"David\",\"Carl\"],\n",
+    "                    [\"Alice\",\"Frank\"],\n",
+    "                    [\"Harry\",\"Irene\"],\n",
+    "                    [\"Carl\",\"Frank\"]])\n",
+    "Graph.saveGraph(g)"
    ]
   }
  ],
