--- a/labs/list2/list_2.ipynb
+++ b/labs/list2/list_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,33 @@
     "            for edge_ids in edges_ids:\n",
     "                    f.write(f'   \"{end_name_id_map[edge_ids[0]]}\" -- \"{end_name_id_map[edge_ids[1]]}\" [ label = \"{edges_ids[edge_ids][\"weight\"]}\" ];\\n')\n",
     "            f.write(\"}\")\n",
-    "\n"
+    "\n",
+    "    def getShortestPaths(self, fromVert: str|list[str,int]):\n",
+    "        end_name_id_map = self.get_id_names_maping()\n",
+    "        x = [id for id in end_name_id_map if fromVert == end_name_id_map[id]][0]\n",
+    "        id_vertex_dict = self.id_vertex_dict\n",
+    "        Q = [id for id in id_vertex_dict]\n",
+    "        info = {id:{\"vertex\": end_name_id_map[id],\n",
+    "                    \"id_path\": [],\n",
+    "                    \"weight\": np.inf\n",
+    "                    }\n",
+    "                for id in id_vertex_dict}\n",
+    "        info[x][\"id_path\"].append(x)\n",
+    "        info[x][\"weight\"] = 0\n",
+    "        while True:\n",
+    "            Q.sort(key= lambda id: info[id][\"weight\"])\n",
+    "            act = Q.pop(0)\n",
+    "            if len(Q) == 0:\n",
+    "                break\n",
+    "            vert = id_vertex_dict[act]\n",
+    "            for edge in vert.get_edges():\n",
+    "                edge_end_point_id = edge.get_endpoint().get_ID()\n",
+    "                if edge_end_point_id in Q:\n",
+    "                    edge_weight = edge.get_weight()\n",
+    "                    if edge_weight + info[act][\"weight\"] < info[edge_end_point_id][\"weight\"]:\n",
+    "                        info[edge_end_point_id][\"weight\"] = edge_weight + info[act][\"weight\"]\n",
+    "                        info[edge_end_point_id][\"id_path\"] = info[act][\"id_path\"] + [edge_end_point_id]    \n",
+    "        return info"
    ]
   },
   {
@@ -394,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +436,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +468,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/3336178149.py:207: Warning: There are 2 vertex with the same value:A in the graph.\n",
+      "/tmp/ipykernel_114223/3195591856.py:207: Warning: There are 2 vertex with the same value:A in the graph.\n",
       "  warnings.warn(f\"There are {len(self.name_id_dict[Vert.get_value()])} vertex with the same value:{Vert.get_value()} in the graph.\", Warning)\n"
      ]
     },
@@ -452,7 +478,7 @@
        "{0: ['A', 0], 1: ['A', 1], 2: 'C'}"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 350,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +513,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -515,15 +541,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b5f8490>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9b5f8510>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9b5f8e10>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b5f8a10>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b5f9d90>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b5fb010>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b152d50>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b2973d0>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b4d5950>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b2959d0>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b294550>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b297a90>}"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 352,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -557,24 +583,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_114223/3336178149.py:261: Warning: You are trying to add an existing edge.\n",
+      "/tmp/ipykernel_114223/1445650704.py:261: Warning: You are trying to add an existing edge.\n",
       "  warnings.warn(\"You are trying to add an existing edge.\", Warning)\n",
-      "/tmp/ipykernel_114223/3336178149.py:265: Warning: You updat the weight value of edge [fromVert, toVert].\n",
+      "/tmp/ipykernel_114223/1445650704.py:265: Warning: You updat the weight value of edge [fromVert, toVert].\n",
       "  warnings.warn(\"You updat the weight value of edge [fromVert, toVert].\", Warning)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b5fafd0>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9b5fb690>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9b5fbdd0>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b5f9d10>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b5f9590>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b5fbc90>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b27b3d0>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b2780d0>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b279f10>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b27a890>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b2797d0>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b27b110>}"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -610,15 +636,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f2b9b419a90>,\n",
-       " (1, 0): <__main__.Edge at 0x7f2b9b418f90>,\n",
-       " (1, 2): <__main__.Edge at 0x7f2b9b419590>,\n",
-       " (2, 1): <__main__.Edge at 0x7f2b9b419650>,\n",
-       " (2, 0): <__main__.Edge at 0x7f2b9b418a10>,\n",
-       " (0, 2): <__main__.Edge at 0x7f2b9b418e90>}"
+       "{(0, 1): <__main__.Edge at 0x7f2b9b279490>,\n",
+       " (1, 0): <__main__.Edge at 0x7f2b9b37cdd0>,\n",
+       " (1, 2): <__main__.Edge at 0x7f2b9b278450>,\n",
+       " (2, 1): <__main__.Edge at 0x7f2b9b2dec10>,\n",
+       " (2, 0): <__main__.Edge at 0x7f2b9b2dd610>,\n",
+       " (0, 2): <__main__.Edge at 0x7f2b9b2de610>}"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,18 +665,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['A', <__main__.Vertex at 0x7f2b9b432b10>],\n",
-       " ['B', <__main__.Vertex at 0x7f2b9b418790>],\n",
-       " ['C', <__main__.Vertex at 0x7f2b9b41b9d0>]]"
+       "[['A', <__main__.Vertex at 0x7f2b9b250a10>],\n",
+       " ['B', <__main__.Vertex at 0x7f2b9b2dd210>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9b678610>]]"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,21 +694,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[['A', 'B'], <__main__.Edge at 0x7f2b9b58bd10>],\n",
-       " [['B', 'A'], <__main__.Edge at 0x7f2b9b58bbd0>],\n",
-       " [['B', 'C'], <__main__.Edge at 0x7f2b9b588e90>],\n",
-       " [['C', 'B'], <__main__.Edge at 0x7f2b9b58b5d0>],\n",
-       " [['C', 'A'], <__main__.Edge at 0x7f2b9b58b590>],\n",
-       " [['A', 'C'], <__main__.Edge at 0x7f2b9b58b950>]]"
+       "[[['A', 'B'], <__main__.Edge at 0x7f2b9b16ff10>],\n",
+       " [['B', 'A'], <__main__.Edge at 0x7f2b9b16c510>],\n",
+       " [['B', 'C'], <__main__.Edge at 0x7f2b9b16e5d0>],\n",
+       " [['C', 'B'], <__main__.Edge at 0x7f2b9b16c5d0>],\n",
+       " [['C', 'A'], <__main__.Edge at 0x7f2b9b16cc90>],\n",
+       " [['A', 'C'], <__main__.Edge at 0x7f2b9b16c650>]]"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,17 +726,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['B', <__main__.Vertex at 0x7f2b9b58b4d0>],\n",
-       " ['C', <__main__.Vertex at 0x7f2b9b58bad0>]]"
+       "[['B', <__main__.Vertex at 0x7f2b9b16dad0>],\n",
+       " ['C', <__main__.Vertex at 0x7f2b9b16cf50>]]"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +763,7 @@
        "(True, True, False)"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,6 +804,107 @@
     "                    [\"Harry\",\"Irene\"],\n",
     "                    [\"Carl\",\"Frank\"]])\n",
     "Graph.saveGraph(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: 0, value: Alice\n",
+      "ID: 1, value: Bob\n",
+      "ID: 2, value: Gail\n",
+      "ID: 3, value: Irene\n",
+      "ID: 4, value: Carl\n",
+      "ID: 5, value: Harry\n",
+      "ID: 6, value: Jen\n",
+      "ID: 7, value: David\n",
+      "ID: 8, value: Ernst\n",
+      "ID: 9, value: Frank\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'vertex': 'Alice', 'id_path': [0], 'weight': 0},\n",
+       " 1: {'vertex': 'Bob', 'id_path': [0, 1], 'weight': 1},\n",
+       " 2: {'vertex': 'Gail', 'id_path': [0, 1, 2], 'weight': 2},\n",
+       " 3: {'vertex': 'Irene', 'id_path': [0, 1, 2, 3], 'weight': 3},\n",
+       " 4: {'vertex': 'Carl', 'id_path': [0, 4], 'weight': 1},\n",
+       " 5: {'vertex': 'Harry', 'id_path': [0, 1, 2, 5], 'weight': 3},\n",
+       " 6: {'vertex': 'Jen', 'id_path': [0, 1, 2, 6], 'weight': 3},\n",
+       " 7: {'vertex': 'David', 'id_path': [0, 7], 'weight': 1},\n",
+       " 8: {'vertex': 'Ernst', 'id_path': [0, 8], 'weight': 1},\n",
+       " 9: {'vertex': 'Frank', 'id_path': [0, 9], 'weight': 1}}"
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = Graph()\n",
+    "\n",
+    "g.addEdgesFromList([[\"Alice\",\"Bob\"],\n",
+    "                    [\"Bob\",\"Gail\"],\n",
+    "                    [\"Irene\",\"Gail\"],\n",
+    "                    [\"Carl\",\"Alice\"],\n",
+    "                    [\"Gail\",\"Harry\"],\n",
+    "                    [\"Irene\",\"Jen\"],\n",
+    "                    [\"Alice\",\"David\"],\n",
+    "                    [\"Harry\",\"Jen\"],\n",
+    "                    [\"Ernst\",\"Frank\"],\n",
+    "                    [\"Alice\",\"Ernst\"],\n",
+    "                    [\"Jen\",\"Gail\"],\n",
+    "                    [\"David\",\"Carl\"],\n",
+    "                    [\"Alice\",\"Frank\"],\n",
+    "                    [\"Harry\",\"Irene\"],\n",
+    "                    [\"Carl\",\"Frank\"]])\n",
+    "for id, value in zip(g.get_vertex_id(), g.get_vertexs_values()):\n",
+    "    print(f\"ID: {id}, value: {value}\")\n",
+    "g.getShortestPaths(\"Alice\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'vertex': '0', 'id_path': [1, 0], 'weight': 4},\n",
+       " 1: {'vertex': '1', 'id_path': [1], 'weight': 0},\n",
+       " 2: {'vertex': '2', 'id_path': [1, 2], 'weight': 1},\n",
+       " 3: {'vertex': '3', 'id_path': [1, 2, 3], 'weight': 2},\n",
+       " 4: {'vertex': '4', 'id_path': [1, 2, 3, 4], 'weight': 3},\n",
+       " 5: {'vertex': '5', 'id_path': [1, 2, 3, 4, 5], 'weight': 4}}"
+      ]
+     },
+     "execution_count": 355,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "g = Graph()\n",
+    "g.addEdgesFromList([[\"0\",\"1\",4],\n",
+    "                    [\"2\",\"3\",1],\n",
+    "                    [\"3\",\"4\",1],\n",
+    "                    [\"4\",\"5\",1],\n",
+    "                    [\"0\",\"3\",5],\n",
+    "                    [\"0\",\"5\",20],\n",
+    "                    [\"1\",\"2\",1],\n",
+    "                    [\"2\",\"4\",15]\n",
+    "                    ])\n",
+    "g.getShortestPaths(\"1\")"
    ]
   }
  ],
