--- a/labs/list2/list_2.ipynb
+++ b/labs/list2/list_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,17 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"test.dot\",\"w\") as f:\n",
-    "    f.write(str(g))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +463,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +505,7 @@
        "{0: ['A', 0], 1: ['A', 1], 2: 'C'}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +540,7 @@
        "{0: 'A', 1: 'B', 2: 'C'}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -578,15 +568,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f47a26dbc10>,\n",
-       " (1, 0): <__main__.Edge at 0x7f47a26dbf50>,\n",
-       " (1, 2): <__main__.Edge at 0x7f47a26d8250>,\n",
-       " (2, 1): <__main__.Edge at 0x7f47a26db290>,\n",
-       " (2, 0): <__main__.Edge at 0x7f47a26d95d0>,\n",
-       " (0, 2): <__main__.Edge at 0x7f47a26db950>}"
+       "{(0, 1): <__main__.Edge at 0x7f47a26ea190>,\n",
+       " (1, 0): <__main__.Edge at 0x7f47a23bf490>,\n",
+       " (1, 2): <__main__.Edge at 0x7f47a23bd250>,\n",
+       " (2, 1): <__main__.Edge at 0x7f47a23bf990>,\n",
+       " (2, 0): <__main__.Edge at 0x7f47a23bdbd0>,\n",
+       " (0, 2): <__main__.Edge at 0x7f47a23bfad0>}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -629,15 +619,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f47a26da9d0>,\n",
-       " (1, 0): <__main__.Edge at 0x7f47a26dafd0>,\n",
-       " (1, 2): <__main__.Edge at 0x7f47a26d9310>,\n",
-       " (2, 1): <__main__.Edge at 0x7f47a26d8f90>,\n",
-       " (2, 0): <__main__.Edge at 0x7f47a26d9ad0>,\n",
-       " (0, 2): <__main__.Edge at 0x7f47a26d8e10>}"
+       "{(0, 1): <__main__.Edge at 0x7f47a26e9c90>,\n",
+       " (1, 0): <__main__.Edge at 0x7f47a26ea150>,\n",
+       " (1, 2): <__main__.Edge at 0x7f47a23bdcd0>,\n",
+       " (2, 1): <__main__.Edge at 0x7f47a23be790>,\n",
+       " (2, 0): <__main__.Edge at 0x7f47a23bcf10>,\n",
+       " (0, 2): <__main__.Edge at 0x7f47a23bec10>}"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -673,15 +663,15 @@
     {
      "data": {
       "text/plain": [
-       "{(0, 1): <__main__.Edge at 0x7f47a2616790>,\n",
-       " (1, 0): <__main__.Edge at 0x7f47a26157d0>,\n",
-       " (1, 2): <__main__.Edge at 0x7f47a26172d0>,\n",
-       " (2, 1): <__main__.Edge at 0x7f47a2615250>,\n",
-       " (2, 0): <__main__.Edge at 0x7f47a2616750>,\n",
-       " (0, 2): <__main__.Edge at 0x7f47a2617610>}"
+       "{(0, 1): <__main__.Edge at 0x7f47a23bcf50>,\n",
+       " (1, 0): <__main__.Edge at 0x7f47a23bcd90>,\n",
+       " (1, 2): <__main__.Edge at 0x7f47a23beb90>,\n",
+       " (2, 1): <__main__.Edge at 0x7f47a23bc910>,\n",
+       " (2, 0): <__main__.Edge at 0x7f47a23bd1d0>,\n",
+       " (0, 2): <__main__.Edge at 0x7f47a23be890>}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,18 +692,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['A', <__main__.Vertex at 0x7f47a27b8ad0>],\n",
-       " ['B', <__main__.Vertex at 0x7f47a26da210>],\n",
-       " ['C', <__main__.Vertex at 0x7f47a26d8150>]]"
+       "[['A', <__main__.Vertex at 0x7f47a26e9310>],\n",
+       " ['B', <__main__.Vertex at 0x7f47a23bccd0>],\n",
+       " ['C', <__main__.Vertex at 0x7f47a23bc9d0>]]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,21 +721,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[['A', 'B'], <__main__.Edge at 0x7f47a26b2590>],\n",
-       " [['B', 'A'], <__main__.Edge at 0x7f47a26b3990>],\n",
-       " [['B', 'C'], <__main__.Edge at 0x7f47a26b1d90>],\n",
-       " [['C', 'B'], <__main__.Edge at 0x7f47a26b1e10>],\n",
-       " [['C', 'A'], <__main__.Edge at 0x7f47a26b2110>],\n",
-       " [['A', 'C'], <__main__.Edge at 0x7f47a26b1a90>]]"
+       "[[['A', 'B'], <__main__.Edge at 0x7f47a23bf3d0>],\n",
+       " [['B', 'A'], <__main__.Edge at 0x7f47a23be310>],\n",
+       " [['B', 'C'], <__main__.Edge at 0x7f47a23be850>],\n",
+       " [['C', 'B'], <__main__.Edge at 0x7f47a23bd590>],\n",
+       " [['C', 'A'], <__main__.Edge at 0x7f47a23be510>],\n",
+       " [['A', 'C'], <__main__.Edge at 0x7f47a23be810>]]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,17 +753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['B', <__main__.Vertex at 0x7f47a26b3e90>],\n",
-       " ['C', <__main__.Vertex at 0x7f47a26b2d90>]]"
+       "[['B', <__main__.Vertex at 0x7f47a23bd650>],\n",
+       " ['C', <__main__.Vertex at 0x7f47a26b0810>]]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +790,7 @@
        "(True, True, False)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,17 +933,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n<!-- Generated by graphviz version 2.43.0 (0)\n -->\n<!-- Title: G Pages: 1 -->\n<svg width=\"147pt\" height=\"479pt\"\n viewBox=\"0.00 0.00 147.00 479.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 475)\">\n<title>G</title>\n<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-475 143,-475 143,4 -4,4\"/>\n<!-- 0 -->\n<g id=\"node1\" class=\"node\">\n<title>0</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"82\" cy=\"-453\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"82\" y=\"-449.3\" font-family=\"Times,serif\" font-size=\"14.00\">0</text>\n</g>\n<!-- 1 -->\n<g id=\"node2\" class=\"node\">\n<title>1</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-366\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"27\" y=\"-362.3\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n</g>\n<!-- 0&#45;&#45;1 -->\n<g id=\"edge1\" class=\"edge\">\n<title>0&#45;&#45;1</title>\n<path fill=\"none\" stroke=\"black\" d=\"M71.65,-436.01C61.82,-420.82 47.12,-398.09 37.3,-382.92\"/>\n<text text-anchor=\"middle\" x=\"61.5\" y=\"-405.8\" font-family=\"Times,serif\" font-size=\"14.00\">4</text>\n</g>\n<!-- 3 -->\n<g id=\"node4\" class=\"node\">\n<title>3</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"70\" cy=\"-192\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"70\" y=\"-188.3\" font-family=\"Times,serif\" font-size=\"14.00\">3</text>\n</g>\n<!-- 0&#45;&#45;3 -->\n<g id=\"edge5\" class=\"edge\">\n<title>0&#45;&#45;3</title>\n<path fill=\"none\" stroke=\"black\" d=\"M81.21,-435.01C79.04,-388.08 72.97,-257.06 70.79,-210.06\"/>\n<text text-anchor=\"middle\" x=\"79.5\" y=\"-318.8\" font-family=\"Times,serif\" font-size=\"14.00\">5</text>\n</g>\n<!-- 5 -->\n<g id=\"node6\" class=\"node\">\n<title>5</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"98\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"98\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">5</text>\n</g>\n<!-- 0&#45;&#45;5 -->\n<g id=\"edge6\" class=\"edge\">\n<title>0&#45;&#45;5</title>\n<path fill=\"none\" stroke=\"black\" d=\"M94.9,-437.17C107.57,-421.05 125,-393.96 125,-367 125,-367 125,-367 125,-104 125,-79.07 114.32,-51.88 106.39,-35.13\"/>\n<text text-anchor=\"middle\" x=\"132\" y=\"-231.8\" font-family=\"Times,serif\" font-size=\"14.00\">20</text>\n</g>\n<!-- 2 -->\n<g id=\"node3\" class=\"node\">\n<title>2</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-279\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"27\" y=\"-275.3\" font-family=\"Times,serif\" font-size=\"14.00\">2</text>\n</g>\n<!-- 1&#45;&#45;2 -->\n<g id=\"edge7\" class=\"edge\">\n<title>1&#45;&#45;2</title>\n<path fill=\"none\" stroke=\"black\" d=\"M27,-347.8C27,-333.05 27,-311.92 27,-297.18\"/>\n<text text-anchor=\"middle\" x=\"30.5\" y=\"-318.8\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n</g>\n<!-- 2&#45;&#45;3 -->\n<g id=\"edge2\" class=\"edge\">\n<title>2&#45;&#45;3</title>\n<path fill=\"none\" stroke=\"black\" d=\"M35.29,-261.61C42.91,-246.56 54.13,-224.37 61.73,-209.34\"/>\n<text text-anchor=\"middle\" x=\"55.5\" y=\"-231.8\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n</g>\n<!-- 4 -->\n<g id=\"node5\" class=\"node\">\n<title>4</title>\n<ellipse fill=\"none\" stroke=\"black\" cx=\"70\" cy=\"-105\" rx=\"27\" ry=\"18\"/>\n<text text-anchor=\"middle\" x=\"70\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">4</text>\n</g>\n<!-- 2&#45;&#45;4 -->\n<g id=\"edge8\" class=\"edge\">\n<title>2&#45;&#45;4</title>\n<path fill=\"none\" stroke=\"black\" d=\"M22.01,-260.94C16.72,-239.93 10.35,-203.4 20,-174 26.9,-152.98 43.05,-133.1 55.15,-120.32\"/>\n<text text-anchor=\"middle\" x=\"27\" y=\"-188.3\" font-family=\"Times,serif\" font-size=\"14.00\">15</text>\n</g>\n<!-- 3&#45;&#45;4 -->\n<g id=\"edge3\" class=\"edge\">\n<title>3&#45;&#45;4</title>\n<path fill=\"none\" stroke=\"black\" d=\"M70,-173.8C70,-159.05 70,-137.92 70,-123.18\"/>\n<text text-anchor=\"middle\" x=\"73.5\" y=\"-144.8\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n</g>\n<!-- 4&#45;&#45;5 -->\n<g id=\"edge4\" class=\"edge\">\n<title>4&#45;&#45;5</title>\n<path fill=\"none\" stroke=\"black\" d=\"M75.53,-87.21C80.44,-72.31 87.57,-50.65 92.48,-35.76\"/>\n<text text-anchor=\"middle\" x=\"88.5\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">1</text>\n</g>\n</g>\n</svg>\n",
       "text/plain": [
-       "<graphviz.sources.Source at 0x7f47dc219910>"
+       "<graphviz.sources.Source at 0x7f47a26df4d0>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,32 +966,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: {'vertex': '0', 'id_path': [1, 0], 'weight': 4},\n",
-       " 1: {'vertex': '1', 'id_path': [1], 'weight': 0},\n",
-       " 2: {'vertex': '2', 'id_path': [1, 2], 'weight': 1},\n",
-       " 3: {'vertex': '3', 'id_path': [1, 2, 3], 'weight': 2},\n",
-       " 4: {'vertex': '4', 'id_path': [1, 2, 3, 4], 'weight': 3},\n",
-       " 5: {'vertex': '5', 'id_path': [1, 2, 3, 4, 5], 'weight': 4}}"
+       "{0: {'vertex': '0', 'id_path': [0], 'weight': 0},\n",
+       " 1: {'vertex': '1', 'id_path': [0, 1], 'weight': 4},\n",
+       " 2: {'vertex': '2', 'id_path': [0, 1, 2], 'weight': 5},\n",
+       " 3: {'vertex': '3', 'id_path': [0, 3], 'weight': 5},\n",
+       " 4: {'vertex': '4', 'id_path': [0, 3, 4], 'weight': 6},\n",
+       " 5: {'vertex': '5', 'id_path': [0, 3, 4, 5], 'weight': 7}}"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.getShortestPaths(\"1\")"
+    "g.getShortestPaths(\"0\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
