--- a/labs/list4/lab4/list4_2.ipynb
+++ b/labs/list4/lab4/list4_2.ipynb
@@ -243,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1 (main, Aug 12 2022, 10:02:14) [GCC 11.2.0]"
+   "version": "3.11.0rc1"
   },
   "orig_nbformat": 4,
   "vscode": {
